[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sharp-seeker"
version = "0.1.0"
description = "Sharp sports betting activity detector with Discord alerts"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "apscheduler>=3.10,<4",
    "discord-webhook>=1.3",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
]

[project.scripts]
sharp-seeker = "sharp_seeker.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
